{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 43,
  "lineage": "e8915387-a606-af7d-f05a-213028a7c025",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034cebbb9bcf861eb",
            "arn": "arn:aws:ec2:us-east-1:378397377947:elastic-ip/eipalloc-034cebbb9bcf861eb",
            "association_id": "eipassoc-07d87a6b39f934aea",
            "domain": "vpc",
            "id": "eipalloc-034cebbb9bcf861eb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bf334fda9d6f14ba",
            "private_dns": "ip-10-0-1-41.ec2.internal",
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-107-21-81-119.compute-1.amazonaws.com",
            "public_ip": "107.21.81.119",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "application-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378397377947:internet-gateway/igw-07e2b4adb5044303d",
            "id": "igw-07e2b4adb5044303d",
            "owner_id": "378397377947",
            "tags": {
              "Name": "application-gw"
            },
            "tags_all": {
              "Name": "application-gw"
            },
            "vpc_id": "vpc-0091bd9cc0e062e77"
          },
          "dependencies": [
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034cebbb9bcf861eb",
            "association_id": "eipassoc-07d87a6b39f934aea",
            "connectivity_type": "public",
            "id": "nat-0ef2d74dcf43849e4",
            "network_interface_id": "eni-0bf334fda9d6f14ba",
            "private_ip": "10.0.1.41",
            "public_ip": "107.21.81.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e56571ff48c6a3ac",
            "tags": {
              "Name": "NAT Gateway for Application"
            },
            "tags_all": {
              "Name": "NAT Gateway for Application"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet-1",
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378397377947:route-table/rtb-00a7a491c94311af5",
            "id": "rtb-00a7a491c94311af5",
            "owner_id": "378397377947",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ef2d74dcf43849e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table for Application"
            },
            "tags_all": {
              "Name": "Private Route Table for Application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0091bd9cc0e062e77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet-1",
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378397377947:route-table/rtb-0ea095649ba09d950",
            "id": "rtb-0ea095649ba09d950",
            "owner_id": "378397377947",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e2b4adb5044303d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table for Application"
            },
            "tags_all": {
              "Name": "Public Route Table for Application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0091bd9cc0e062e77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.application-gw",
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079525835850193b0",
            "route_table_id": "rtb-00a7a491c94311af5",
            "subnet_id": "subnet-04ebb2b852b3f2a30"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet-1",
            "aws_subnet.public_subnet-1",
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0195b3a9990bfb391",
            "route_table_id": "rtb-00a7a491c94311af5",
            "subnet_id": "subnet-0e0ad7d0b48630ccc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet-2",
            "aws_subnet.public_subnet-1",
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec212b5c72fdaeec",
            "route_table_id": "rtb-0ea095649ba09d950",
            "subnet_id": "subnet-0e56571ff48c6a3ac"
          },
          "dependencies": [
            "aws_internet_gateway.application-gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet-1",
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d79ba90cac90e2e",
            "route_table_id": "rtb-0ea095649ba09d950",
            "subnet_id": "subnet-08cfb8c41a16c08dc"
          },
          "dependencies": [
            "aws_internet_gateway.application-gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet-2",
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378397377947:subnet/subnet-04ebb2b852b3f2a30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ebb2b852b3f2a30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378397377947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 for Application"
            },
            "tags_all": {
              "Name": "Private Subnet 1 for Application"
            },
            "vpc_id": "vpc-0091bd9cc0e062e77"
          },
          "dependencies": [
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378397377947:subnet/subnet-0e0ad7d0b48630ccc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0ad7d0b48630ccc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378397377947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2 for Application"
            },
            "tags_all": {
              "Name": "Private Subnet 2 for Application"
            },
            "vpc_id": "vpc-0091bd9cc0e062e77"
          },
          "dependencies": [
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378397377947:subnet/subnet-0e56571ff48c6a3ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e56571ff48c6a3ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378397377947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1 for Application"
            },
            "tags_all": {
              "Name": "Public Subnet 1 for Application"
            },
            "vpc_id": "vpc-0091bd9cc0e062e77"
          },
          "dependencies": [
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378397377947:subnet/subnet-08cfb8c41a16c08dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cfb8c41a16c08dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378397377947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2 for Application"
            },
            "tags_all": {
              "Name": "Public Subnet 2 for Application"
            },
            "vpc_id": "vpc-0091bd9cc0e062e77"
          },
          "dependencies": [
            "aws_vpc.application"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378397377947:vpc/vpc-0091bd9cc0e062e77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f06d864b681812f2",
            "default_route_table_id": "rtb-0aba54e8db1ce7d73",
            "default_security_group_id": "sg-09161aae6e2076182",
            "dhcp_options_id": "dopt-0d4d0b186fbd63aac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0091bd9cc0e062e77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aba54e8db1ce7d73",
            "owner_id": "378397377947",
            "tags": {
              "Name": "application"
            },
            "tags_all": {
              "Name": "application"
            }
          }
        }
      ]
    }
  ]
}